--- a/telegram-bot.service
+++ b/telegram-bot.service
@@ -7,6 +7,7 @@ Type=simple
 User=root
 WorkingDirectory=/root/TestBot
 Environment=PATH=/root/TestBot/venv/bin:$PATH
+EnvironmentFile=/root/TestBot/.env
 ExecStart=/root/TestBot/venv/bin/python3 -u bot.py
 
 Restart=always
