--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-aiogram>=3.0.0
-openai>=1.0.0
-python-dotenv>=0.19.0
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-python-telegram-bot
-langchain
-chromadb
-tiktoken 
+aiogram==3.3.0
+python-dotenv==1.0.0
+openai==1.12.0
+langchain==0.1.9
+chromadb==0.4.22
+tiktoken==0.6.0
+google-api-python-client==2.118.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+python-telegram-bot 
