--- a/requirements.txt
+++ b/requirements.txt
@@ -143,3 +143,28 @@ websockets==15.0.1
 wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
+
+# База данных векторов
+langchain>=0.0.267
+langchain-community>=0.0.3
+langchain-openai>=0.0.2
+chromadb>=0.4.18
+
+# OpenAI
+openai>=1.3.0
+
+# Обработка документов
+pypdf2>=3.0.1
+python-docx>=0.8.11
+markdown>=3.0
+
+# Телеграм бот
+aiogram>=3.0.0
+
+# Google API
+google-api-python-client>=2.0.0
+google-auth-httplib2>=0.1.0
+google-auth-oauthlib>=1.0.0
+
+# Утилиты
+python-dotenv>=1.0.0
