Refactor: Rename bot, add time logic (disabled), update deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,18 @@ markdown>=3.0
 google-api-python-client>=2.0.0
 google-auth-httplib2>=0.1.0
 google-auth-oauthlib>=1.0.0
+
+# Добавленные библиотеки
+vk_api
+python-dotenv
+google-api-python-client
+google-auth-oauthlib
+google-auth-httplib2
+python-docx
+pypdf2
+chromadb
+langchain-openai
+langchain-core
+langchain
+pathspec
+pytz
